add and finish chiken and cookies recipes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
 
     <body>
+        
         <h1>Odin recipes</h1>
-
-        <a href="recipes/pork-fried-rice.html">Pork Fried Rice</a>    
+        <ul>
+           <li> <a href="recipes/pork-fried-rice.html">Pork Fried Rice</a> </li>  
+           <li><a href="recipes/chocolate-cookies.html">chocolate-cookies</a></li>
+           <li><a href="recipes/chicken-legs.html">chicken-legs</a></li>
+        </ul>    
 
     </body>
 </html>
